# Actio

./: .gitattributes  .gitignore  CLAUDE.md  COMPATIBILITY.md  ISSUES.md  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  design.md  docker-compose.yml
backend/.cargo/: config.toml
backend/actio-core/: Cargo.toml
backend/actio-core/migrations/: 001_initial_schema.sql  002_speaker_diarization.sql  003_candidate_dismissal.sql  004_action_windows.sql  005_batch_clip_processing.sql  006_reminders_source_window_soft_fk.sql  007_tenant_profile_and_self_speaker.sql
backend/actio-core/src/: config.rs  error.rs  lib.rs  testing.rs
backend/actio-core/src/api/: candidate_speaker.rs  clip.rs  error.rs  label.rs  llm.rs  mod.rs  profile.rs  reminder.rs  segment.rs  session.rs  settings.rs  translate.rs  ws.rs
backend/actio-core/src/domain/: mod.rs  speaker_matcher.rs  types.rs
backend/actio-core/src/engine/: app_settings.rs  asr.rs  audio_capture.rs  audio_quality.rs  batch_processor.rs  capture_daemon.rs  clip_boundary.rs  clip_storage.rs  clip_writer.rs  cluster.rs  continuity.rs  diarization.rs  dictation.rs  inference_pipeline.rs  live_enrollment.rs  live_streaming.rs  llm_catalog.rs  llm_client.rs  llm_downloader.rs  llm_endpoint.rs  llm_prompt.rs  llm_router.rs  llm_translate.rs  local_llm_engine.rs  metrics.rs  mod.rs  model_manager.rs  remote_llm_client.rs  todo_generator.rs  transcript_aggregator.rs  vad.rs  voiceprint_clustering.rs  wav.rs  window_extractor.rs
backend/actio-core/src/engine/agent/: mod.rs  pipeline.rs  repair.rs  task.rs
backend/actio-core/src/engine/agent/tasks/: mod.rs  refinement.rs  todo.rs
backend/actio-core/src/repository/: audio_clip.rs  db.rs  extraction_window.rs  label.rs  mod.rs  reminder.rs  segment.rs  session.rs  speaker.rs  tenant_profile.rs  todo.rs  transcript.rs
backend/actio-core/tests/: batch_clip_processing_smoke.rs
backend/docs/superpowers/plans/: 2026-04-05-asr-voiceprint-part1-foundation.md  2026-04-05-asr-voiceprint-part2-worker.md  2026-04-05-asr-voiceprint-part3-pipeline.md  2026-04-05-llm-todo-generation.md  2026-04-06-gap-closure-followup.md  2026-04-08-reminders-api.md
backend/docs/superpowers/specs/: 2026-04-05-llm-todo-generation-design.md  2026-04-08-reminders-api-design.md
backend/migrations/: 001_create_speakers.sql  002_create_sessions.sql  003_create_segments.sql  004_create_transcripts.sql  005_create_logs_and_embeddings.sql  006_create_todos.sql  007_rename_todos_to_reminders.sql  008_create_labels.sql  009_create_sessions_index.sql  010_reminders_session_nullable.sql
backend/proto/: inference.proto
backend/python-worker/: config.py  health.py  inference_pb2.py  inference_pb2_grpc.py  main.py  pyproject.toml  requirements.txt
backend/python-worker/models/: loader.py
backend/python-worker/services/: __init__.py  asr.py  speaker.py  vad.py
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
backend/src-tauri/capabilities/: default.json
backend/src-tauri/src/: main.rs  updater.rs
backend/src/api/: label.rs  mod.rs  reminder.rs  session.rs  ws.rs
backend/src/domain/: speaker_matcher.rs  types.rs
backend/src/engine/: audio_coordinator.rs  circuit_breaker.rs  grpc_client.rs  inference_router.rs  metrics.rs  mod.rs  todo_generator.rs  transcript_aggregator.rs  worker.rs
backend/src/grpc/: mod.rs
backend/src/repository/: db.rs  label.rs  mod.rs  reminder.rs  session.rs  speaker.rs  todo.rs  transcript.rs
backend/tests/: test_circuit_breaker.rs  test_e2e_session.rs  test_repository.rs
backend/tests/common/: mod.rs
docs/: dev-setup.md
docs/superpowers/plans/: 2026-04-09-settings-archive.md  2026-04-10-voice-tabs.md  2026-04-11-draggable-tray.md  2026-04-11-local-llm-research-notes.md  2026-04-11-local-llm-via-mistral-rs.md  2026-04-12-actio-icon.md  2026-04-15-keyboard-navigation.md  2026-04-15-llm-todo-extraction.md  2026-04-17-settings-tabs-redesign.md  2026-04-17-speaker-diarization.md  2026-04-18-hot-update.md  2026-04-18-speaker-continuity.md  2026-04-25-always-on-listening.md  2026-04-25-batch-clip-processing.md  2026-04-25-live-diarized-transcript-translation.md  2026-04-26-me-centered-action-extraction.md
docs/superpowers/specs/: 2026-04-09-settings-archive-design.md  2026-04-10-voice-tabs-design.md  2026-04-11-draggable-tray-design.md  2026-04-11-local-llm-via-mistral-rs-design.md  2026-04-12-actio-icon-design.md  2026-04-15-keyboard-navigation-design.md  2026-04-15-llm-todo-extraction-design.md  2026-04-17-settings-tabs-redesign-design.md  2026-04-18-hot-update-design.md  (+6 more)
frontend/: .env.example  CLAUDE.md  db.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts
scripts/: start-auto-loop.ps1  start-auto-loop.sh
spikes/logo/: actio.html
(+125 files in other folders)
