[package]
name = "actio-asr"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP / WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# OpenAPI docs
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Config
dotenvy = "0.15"
config = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

[lib]
name = "actio_asr"
path = "src/lib.rs"

[[bin]]
name = "actio-asr"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
