[package]
name = "actio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP / WebSocket
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate",
    "uuid",
] }
bytemuck = { version = "1", features = ["derive"] }

# ML inference
sherpa-onnx = { version = "1.12.36", default-features = false, features = ["shared"] }

# Audio capture
cpal = "0.15"
crossbeam-channel = "0.5"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# HTTP client (for LLM and model downloads)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Archive extraction for model downloads
bzip2 = "0.4"
tar = "0.4"

# OpenAPI docs
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Local LLM (feature-gated) — llama.cpp via FFI bindings for GGUF inference
llama-cpp-2 = { version = "=0.1.143", optional = true }
encoding_rs = { version = "0.8", optional = true }


# Hash verification for LLM downloads
sha2 = "0.10"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[features]
default = ["local-llm"]
local-llm = ["dep:llama-cpp-2", "dep:encoding_rs"]

[lib]
name = "actio_core"
path = "src/lib.rs"
