[project]
name = "actio-worker"
version = "0.1.0"
description = "ASR + Speaker embedding inference worker"
requires-python = ">=3.12,<3.13"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.68",
    "grpcio-tools>=1.80.0",
    "protobuf>=6.31.1",
    "numpy>=2.0",
    "soundfile>=0.12",
    "funasr>=1.2",
    "modelscope>=1.22",
    "torch>=2.5",
    "torchaudio>=2.5",
    "pydantic>=2.0",
]


[tool.uv]
package = false
