[package]
name = "actio-desktop"
version = "0.1.0"
description = "Actio desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
enigo = "0.3"
tracing = "0.1"
actio-core = { path = "../actio-core", default-features = false }

[features]
default = ["local-llm"]
local-llm = ["actio-core/local-llm"]

[[bin]]
name = "actio-desktop"
path = "src/main.rs"

